--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     padding-top: 23px;
 }    
 
-/* Everything inside the navigation container */
+/* Everything inside the first container */
 
 .navigation {
     display: block; 
@@ -24,7 +24,7 @@
     gap: 26px;
     float: right;
     vertical-align: center;
-    margin-right: 0px;
+    margin-right: 20px;
     
 }
 
@@ -41,7 +41,7 @@
     vertical-align: center;
     width: 152px;
     height: 60px;
-    margin-left: 0px;
+    margin-left: 20px;
 }
 
 .text {
@@ -94,5 +94,53 @@
     align-items: center;
     float: right;
     padding-top: 100px;
+    margin-right: 20px;
 }
 
+/* Everything inside the second container */
+
+.white {
+    width: 100%;
+    height: 535px;
+}
+
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.header h3 {
+    font-family: 'Roboto', sans-serif;
+    font-size: 28px;
+    color: #1F2937;
+    font-weight: 700;
+    margin-top: 0;
+}
+
+.pictures {
+    display: flex;
+    padding-left: 50px;
+    padding-right: 50px;
+    justify-content: center;
+}    
+
+.img-container {
+    padding: 30px;
+}
+
+.pictures img {
+    border: #3B82F6 solid 4px;
+    border-radius: 15px;
+}
+
+.img-container p {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 200;
+    color: #4B5563;
+    margin-top: 0;
+    font-size: 18px;
+    max-inline-size: fit-content;
+    text-align: center;
+    padding-top: 10px;
+}
