--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body {
+    margin: 0;
+}
+
+
 .blue {
     width: 100%;
     height: 535px;
@@ -130,7 +135,7 @@
 }
 
 .pictures img {
-    border: #3B82F6 solid 4px;
+    border: #b7c9e3 solid 4px;
     border-radius: 15px;
 }
 
