--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ body {
 
 .box {
     width: 1022px;
-    height: 535px;
     margin: 0 auto;
     position: relative;
     padding-top: 23px;
@@ -30,7 +29,6 @@ body {
     float: right;
     vertical-align: center;
     margin-right: 20px;
-    
 }
 
 .navigation a {
@@ -107,6 +105,7 @@ body {
 .white {
     width: 100%;
     height: 535px;
+    padding-top: 50px;
 }
 
 .header {
@@ -148,4 +147,41 @@ body {
     max-inline-size: fit-content;
     text-align: center;
     padding-top: 10px;
+}
+
+/* Everything inside the third container */
+
+.grey {
+    width: 100%;
+    height: 535px;
+    background: #e5e7eb;
+    position: relative;
+}
+
+.grey div.box {
+    height: 200px;
+    text-align: -webkit-center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 150px;
+}
+
+.quote h3 {
+    font-family: 'Roboto', sans-serif;
+    font-size: 36px;
+    font-weight: 100;
+    font-style: italic;
+    width: 800px;
+    height: 100%;
+    text-align: justify;
+    color: #1F2937;
+}
+
+.quote p {
+    font-family: 'Roboto', sans-serif;
+    text-align: right;
+    font-size: 24px;
+    font-weight: 700;
+    color: #1F2937;
 }
